--- a/timetable.html
+++ b/timetable.html
@@ -17,12 +17,12 @@
     <div class="flex-col">
         <!-- 切り替えボタン -->
         <div class="flex-row toggle-btn-box">
-            <div class="toggle-btn flex-col" id="toggle-btn-1 flex-col">
+            <div class="toggle-btn flex-col active" id="toggle-btn-1" data-target="toggle-table-1">
                 <div class="day-count">(Day1)</div>
                 <div class="date">5.2</div>
                 <div class="day">Saturday</div>
             </div>
-            <div class="toggle-btn flex-col" id="toggle-btn-2 flex-col">
+            <div class="toggle-btn flex-col" id="toggle-btn-2" data-target="toggle-table-2">
                 <div class="day-count">(Day2)</div>
                 <div class="date">5.3</div>
                 <div class="day">Sunday</div>
@@ -124,5 +124,7 @@
             </tbody>
         </table>
     </div>
+
+    <script src="js/timetable.js" defer></script>
 </body>
 </html>
