レスポンシブの対応

--- a/timetable.html
+++ b/timetable.html
@@ -33,7 +33,7 @@
         <table class="timetable" id="toggle-table-1">
             <thead>
                 <tr>
-                    <th class="time"></th>
+                    <th class="time">Day1</th>
                     <th>メインステージ</th>
                     <th>サブステージ</th>
                 </tr>
@@ -80,7 +80,7 @@
         <table class="timetable" id="toggle-table-2">
             <thead>
                 <tr>
-                    <th class="time"></th>
+                    <th class="time">Day2</th>
                     <th>メインステージ</th>
                     <th>サブステージ</th>
                 </tr>
