--- a/contact-confirm.html
+++ b/contact-confirm.html
@@ -11,28 +11,30 @@
     <div class="form-confirm">
         <div class="form-item">
             <label>お問い合わせ種別</label>
-            <p>チケットについて</p>
+            <p id="type"></p>
         </div>
         <div class="form-item">
             <label>お名前</label>
-            <p>田中太郎</p>
+            <p id="name"></p>
         </div>
         <div class="form-item">
             <label>メールアドレス</label>
-            <p>abc@example.com</p>
+            <p id="email"></p>
         </div>
         <div class="form-item">
             <label>電話番号</label>
-            <p>012-3456-7890</p>
+            <p id="phone"></p>
         </div>
         <div class="form-item">
             <label>お問い合わせ内容</label>
-            <p class="form-text">雨天中止の場合はチケットの料金は払い戻されますか？</p>
+            <p id="text"></p>
         </div>
         <div class="form-btns">
             <a href="contact.html" class="denger-btn">戻る</a>
-            <button type="submit" id="submit">確認</button>
+            <button id="submit">送信</button>
         </div>
     </div>
+
+    <script src="/js/contact-confirm.js"></script>
 </body>
 </html>
