--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <h1>お問い合わせ</h1>
     <form id="contact">
         <div class="form-item">
-            <label for="form-type">お問い合わせ種別<span class="required">必須</span></label>
-            <select name="type" id="form-type" required>
+            <label for="form-type">お問い合わせ種別<span class="required">必須</span><span class="error" id="error-type"></span></label>
+            <select name="type" id="form-type">
                 <option value="チケットについて" checked>チケットについて</option>
                 <option value="会場について">会場について</option>
                 <option value="主演者について">出演者について</option>
@@ -19,26 +19,28 @@
             </select>
         </div>
         <div class="form-item">
-            <label for="form-name">お名前<span class="required">必須</span></label>
+            <label for="form-name">お名前<span class="required">必須</span><span class="error" id="error-name"></span></label>
             <input type="text" name="name" id="form-name" placeholder="田中太郎">
         </div>
         <div class="form-item">
-            <label for="form-email">メールアドレス<span class="required">必須</span></label>
+            <label for="form-email">メールアドレス<span class="required">必須</span><span class="error" id="error-email"></span></label>
             <input type="text" name="email" id="form-email" placeholder="abc@example.com">
         </div>
         <div class="form-item">
-            <label for="form-phone">電話番号<span class="required">必須</span></label>
+            <label for="form-phone">電話番号<span class="error" id="error-phone"></span></label>
             <input type="text" name="phone" id="form-phone" placeholder="012-3456-7890">
         </div>
         <div class="form-item">
-            <label for="form-text">お問い合わせ内容<span class="required">必須</span></label>
+            <label for="form-text">お問い合わせ内容<span class="required">必須</span><span class="error" id="error-text"></span></label>
             <textarea name="text" id="form-text"></textarea>
         </div>
         <a href="privacy.html" class="privacy-link">プライバシーポリシー</a>
         <div class="form-btns">
-            <button type="reset">リセット</button>
+            <button type="reset" id="reset">リセット</button>
             <button type="submit" id="submit">確認</button>
         </div>
     </form>
+
+    <script src="/js/contact.js"></script>
 </body>
 </html>
