--- a/timetable.html
+++ b/timetable.html
@@ -6,9 +6,13 @@
     <title>Spring Music Festival 2026 | タイムテーブル</title>
     <link rel="stylesheet" href="css/timetable.css">
     <!-- Noto Sans JP -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -17,12 +21,12 @@
     <div class="flex-col">
         <!-- 切り替えボタン -->
         <div class="flex-row toggle-btn-box">
-            <div class="toggle-btn flex-col active" id="toggle-btn-1" data-target="toggle-table-1">
+            <div class="toggle-btn flex-col active ff-en" id="toggle-btn-1" data-target="toggle-table-1">
                 <div class="day-count">(Day1)</div>
                 <div class="date">5.2</div>
                 <div class="day">Saturday</div>
             </div>
-            <div class="toggle-btn flex-col" id="toggle-btn-2" data-target="toggle-table-2">
+            <div class="toggle-btn flex-col ff-en" id="toggle-btn-2" data-target="toggle-table-2">
                 <div class="day-count">(Day2)</div>
                 <div class="date">5.3</div>
                 <div class="day">Sunday</div>
@@ -41,37 +45,37 @@
             <tbody>
                 <tr>
                     <td class="time"><div><span>11:00</span><span>-</span><span>11:40</span></div></td>
-                    <td class="artist"><div>The Blossom Drive</div></td>
+                    <td class="artist"><div class="ff-en">The Blossom Drive</div></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>12:00</span><span>-</span><span>12:40</span></div></td>
                     <td class="artist"><div>高橋リオ</div></td>
-                    <td class="artist"><div>Morning Echoes</div></td>
+                    <td class="artist"><div class="ff-en">Morning Echoes</div></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>13:00</span><span>-</span><span>13:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div>Velvet Groove</div></td>
+                    <td class="artist"><div class="ff-en">Velvet Groove</div></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>14:00</span><span>-</span><span>14:40</span></div></td>
-                    <td class="artist"><div>DJ Breeze</div></td>
+                    <td class="artist"><div class="ff-en">DJ Breeze</div></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>15:00</span><span>-</span><span>15:40</span></div></td>
                     <td class="artist"><div>中村蓮</div></td>
-                    <td class="artist"><div>Morning Echoes</div></td>
+                    <td class="artist"><div class="ff-en">Morning Echoes</div></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>16:00</span><span>-</span><span>16:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div>Velvet Groove</div></td>
+                    <td class="artist"><div class="ff-en">Velvet Groove</div></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>17:00</span><span>-</span><span>19:40</span></div></td>
-                    <td class="artist"><div>The Blossom Drive<br>スペシャルライブ</div></td>
+                    <td class="artist"><div><span class="ff-en">The Blossom Drive</span><span>スペシャルライブ</span></div></td>
                     <td class="artist"></td>
                 </tr>
             </tbody>
@@ -88,7 +92,7 @@
             <tbody>
                 <tr>
                     <td class="time"><div><span>11:00</span><span>-</span><span>11:40</span></div></td>
-                    <td class="artist"><div>Crimson Waves</div></td>
+                    <td class="artist"><div class="ff-en">Crimson Waves</div></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
@@ -99,7 +103,7 @@
                 <tr>
                     <td class="time"><div><span>13:00</span><span>-</span><span>13:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div>Neon Lights</div></td>
+                    <td class="artist"><div class="ff-en">Neon Lights</div></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>14:00</span><span>-</span><span>14:40</span></div></td>
@@ -114,11 +118,11 @@
                 <tr>
                     <td class="time"><div><span>16:00</span><span>-</span><span>16:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div>Neon Lights</div></td>
+                    <td class="artist"><div class="ff-en">Neon Lights</div></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>17:00</span><span>-</span><span>19:40</span></div></td>
-                    <td class="artist"><div>Horizon Strings<br>フィナーレ</div></td>
+                    <td class="artist"><div><span class="ff-en">Horizon Strings</span><span>フィナーレ</span></div></td>
                     <td class="artist"></td>
                 </tr>
             </tbody>
