--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>プライバシーポリシーページ</title>
-    <link rel="stylesheet" href="privacy.css">
+    <link rel="stylesheet" href="css/privacy.css">
 </head>
 
 <body>
