--- a/ticket.html
+++ b/ticket.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>チケット情報ページ</title>
-    <link rel="stylesheet" href="ticket.css">
+    <link rel="stylesheet" href="css/ticket.css">
 </head>
 
 <body>
