アーティスト名のタグをaタグに修正

--- a/timetable.html
+++ b/timetable.html
@@ -45,37 +45,37 @@
             <tbody>
                 <tr>
                     <td class="time"><div><span>11:00</span><span>-</span><span>11:40</span></div></td>
-                    <td class="artist"><div class="ff-en">The Blossom Drive</div></td>
+                    <td class="artist"><a href="artists/TheBlossomDrive.html" class="ff-en">The Blossom Drive</a></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>12:00</span><span>-</span><span>12:40</span></div></td>
-                    <td class="artist"><div>高橋リオ</div></td>
-                    <td class="artist"><div class="ff-en">Morning Echoes</div></td>
+                    <td class="artist"><a href="artists/高橋リオ.html">高橋リオ</a></td>
+                    <td class="artist"><a href="artists/MorningEchoes.html" class="ff-en">Morning Echoes</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>13:00</span><span>-</span><span>13:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div class="ff-en">Velvet Groove</div></td>
+                    <td class="artist"><a href="artists/VelvetGroove.html" class="ff-en">Velvet Groove</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>14:00</span><span>-</span><span>14:40</span></div></td>
-                    <td class="artist"><div class="ff-en">DJ Breeze</div></td>
+                    <td class="artist"><a href="artists/DJ_Breeze.html" class="ff-en">DJ Breeze</a></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>15:00</span><span>-</span><span>15:40</span></div></td>
-                    <td class="artist"><div>中村蓮</div></td>
-                    <td class="artist"><div class="ff-en">Morning Echoes</div></td>
+                    <td class="artist"><a href="artists/中村蓮.html">中村蓮</a></td>
+                    <td class="artist"><a href="artists/MorningEchoes.html" class="ff-en">Morning Echoes</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>16:00</span><span>-</span><span>16:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div class="ff-en">Velvet Groove</div></td>
+                    <td class="artist"><a href="artists/VelvetGroove.html" class="ff-en">Velvet Groove</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>17:00</span><span>-</span><span>19:40</span></div></td>
-                    <td class="artist"><div><span class="ff-en">The Blossom Drive</span><span>スペシャルライブ</span></div></td>
+                    <td class="artist"><a href="artists/TheBlossomDrive.html"><span class="ff-en">The Blossom Drive</span><span>スペシャルライブ</span></a></td>
                     <td class="artist"></td>
                 </tr>
             </tbody>
@@ -92,37 +92,37 @@
             <tbody>
                 <tr>
                     <td class="time"><div><span>11:00</span><span>-</span><span>11:40</span></div></td>
-                    <td class="artist"><div class="ff-en">Crimson Waves</div></td>
+                    <td class="artist"><a href="artists/CrimsonWaves.html" class="ff-en">Crimson Waves</a></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>12:00</span><span>-</span><span>12:40</span></div></td>
-                    <td class="artist"><div>宮本サクラ</div></td>
-                    <td class="artist"><div>風雅(ふうが)</div></td>
+                    <td class="artist"><a href="artists/宮本サクラ.html">宮本サクラ</a></td>
+                    <td class="artist"><a href="artists/風雅.html">風雅(ふうが)</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>13:00</span><span>-</span><span>13:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div class="ff-en">Neon Lights</div></td>
+                    <td class="artist"><a href="artists/NeonLights.html" class="ff-en">Neon Lights</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>14:00</span><span>-</span><span>14:40</span></div></td>
-                    <td class="artist"><div>森下晴人</div></td>
+                    <td class="artist"><a href="artists/森下晴人.html">森下晴人</a></td>
                     <td class="artist"></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>15:00</span><span>-</span><span>15:40</span></div></td>
-                    <td class="artist"><div>宮本サクラ</div></td>
-                    <td class="artist"><div>風雅(ふうが)</div></td>
+                    <td class="artist"><a href="artists/宮本サクラ.html">宮本サクラ</a></td>
+                    <td class="artist"><a href="artists/風雅.html">風雅(ふうが)</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>16:00</span><span>-</span><span>16:40</span></div></td>
                     <td class="artist"></td>
-                    <td class="artist"><div class="ff-en">Neon Lights</div></td>
+                    <td class="artist"><a href="artists/NeonLights.html" class="ff-en">Neon Lights</a></td>
                 </tr>
                 <tr>
                     <td class="time"><div><span>17:00</span><span>-</span><span>19:40</span></div></td>
-                    <td class="artist"><div><span class="ff-en">Horizon Strings</span><span>フィナーレ</span></div></td>
+                    <td class="artist"><a href="artists/HorizonStrings.html"><span class="ff-en">Horizon Strings</span><span>フィナーレ</span></a></td>
                     <td class="artist"></td>
                 </tr>
             </tbody>
