日付や色の修正

--- a/artists/TheBlossomDrive.html
+++ b/artists/TheBlossomDrive.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Blossom Drive</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +16,7 @@
         <img src="img/TheBlossomDrive.webp" alt="TheBlossomDrive">
     </div>
     <div>
-        <p>5月3日(土) 11:00-11:40 / 17:00-18:00(スペシャルライブ) メインステージ</p>
+        <p>5月2日(土) 11:00-11:40 / 17:00-18:00(スペシャルライブ) メインステージ</p>
     </div>
     <div>
         <h1>The Blossom Drive</h1>
