--- a/artists/VelvetGroove.html
+++ b/artists/VelvetGroove.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velvet Groove</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +18,7 @@
         <img src="img/VelvetGroove.webp" alt="VelvetGroove">
     </div>
     <div>
-        <p>5月3日(土) 13:00-13:40 / 16:00-16:40 サブステージ</p>
+        <p>5月2日(土) 13:00-13:40 / 16:00-16:40 サブステージ</p>
     </div>
     <div>
         <h1>Velvet Groove</h1>
