--- a/artists/index.html
+++ b/artists/index.html
@@ -6,16 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>出演者一覧</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="event-date">
-        <a href="#SAT-artists">5月3日(SAT)</a>
-        <a href="#SUN-artists">5月4日(SUN)</a>
+        <a href="#SAT-artists">5月2日(土)</a>
+        <a href="#SUN-artists">5月3日(日)</a>
     </div>
-    <h1 class="text-center">Artists</h1>
+    <h1 class="text-center">Artist</h1>
     <section class="group-section">
-        <h2 id="SAT-artists">5月3日(SAT)</h2>
+        <h2 id="SAT-artists">5月2日(土)</h2>
         <div class="card-container">
             <a href="TheBlossomDrive.html">
                 <div class="card-blog-a">
@@ -74,7 +79,7 @@
         </div>
     </section>
     <section class="group-section">
-        <h2 id="SUN-artists">5月4日(SUN)</h2>
+        <h2 id="SUN-artists">5月3日(日)</h2>
         <div class="card-container">
             <a href="宮本サクラ.html">
                 <div class="card-blog-a">
