--- a/artists/CrimsonWaves.html
+++ b/artists/CrimsonWaves.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crimson Waves</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +18,7 @@
         <img src="img/CrimsonWaves.webp" alt="CrimsonWaves">
     </div>
     <div>
-        <p>5月4日(日) 11:00-11:40 メインステージ</p>
+        <p>5月3日(日) 11:00-11:40 メインステージ</p>
     </div>
     <div>
         <h1>Crimson Waves</h1>
