--- a/artists/DJ_Breeze.html
+++ b/artists/DJ_Breeze.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DJ_Breeze</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +18,7 @@
         <img src="img/DJ_Breeze.webp" alt="DJ_Breeze">
     </div>
     <div>
-        <p>5月3日(土) 14:00-14:40 メインステージ</p>
+        <p>5月2日(土) 14:00-14:40 メインステージ</p>
     </div>
     <div>
         <h1>DJ Breeze</h1>
