--- a/artists/MorningEchoes.html
+++ b/artists/MorningEchoes.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morning Echoes</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +18,7 @@
         <img src="img/MorningEchoes.webp" alt="MorningEchoes">
     </div>
     <div>
-        <p>5月3日(土) 12:00-12:40 / 15:00-15:40 サブステージ</p>
+        <p>5月2日(土) 12:00-12:40 / 15:00-15:40 サブステージ</p>
     </div>
     <div>
         <h1>Morning Echoes</h1>
