--- a/artists/NeonLights.html
+++ b/artists/NeonLights.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neon Lights</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +18,7 @@
         <img src="img/NeonLights.webp" alt="NeonLights">
     </div>
     <div>
-        <p>5月4日(日) 13:00-13:40 / 16:00-16:40 サブステージ</p>
+        <p>5月3日(日) 13:00-13:40 / 16:00-16:40 サブステージ</p>
     </div>
     <div>
         <h1>Neon Lights</h1>
