--- a/artists/風雅.html
+++ b/artists/風雅.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>風雅</title>
     <link rel="stylesheet" href="../css/artists.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="artist">
@@ -13,7 +18,7 @@
         <img src="img/風雅.webp" alt="風雅">
     </div>
     <div>
-        <p>5月4日(日) 12:00-12:40 / 15:00-15:40 サブステージ</p>
+        <p>5月3日(日) 12:00-12:40 / 15:00-15:40 サブステージ</p>
     </div>
     <div>
         <h1>風雅</h1>
