--- a/faq.html
+++ b/faq.html
@@ -5,11 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>よくある質問ページ</title>
+    <link rel="stylesheet" href="css/faq.css">
+    <!-- Noto Sans JP(日本語) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Poppins(英語) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
+    <header class="site-header">
+        <a href="index.html" class="site-title">Spring Music Festival 2026</a>
+
+        <button class="menu-button" aria-label="メニュー">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
+    <!-- ハンバーガーメニュー展開部分 -->
+    <nav class="hamburger-menu" id="hamburgerMenu">
+        <button class="close-button" aria-label="閉じる">✕</button>
+        <ul>
+            <li><a href="timetable.html">タイムテーブル</a></li>
+            <li><a href="artists/index.html">出演者一覧</a></li>
+            <li><a href="access.html">会場案内</a></li>
+            <li><a href="ticket.html">チケット情報</a></li>
+            <li><a href="goods.html">グッズ</a></li>
+            <li><a href="guide.html">来場者ガイド</a></li>
+            <li><a href="#">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
+            <li><a href="privacy.html">プライバシーポリシー</a></li>
+        </ul>
+    </nav>
+
 
     <h1>チケットについて</h1>
 
@@ -78,7 +111,17 @@
         満車の場合は近隣のコインパーキングをご利用ください。なるべく公共交通機関でのご来場をお願いいたします。
     </p>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuButton = document.querySelector('.menu-button');
+            const menu = document.getElementById('hamburgerMenu');
 
+            menuButton.addEventListener('click', () => {
+                menu.classList.toggle('active');
+                menuButton.classList.toggle('active');
+            });
+        });
+    </script>
 
 </body>
 
