--- a/timetable.html
+++ b/timetable.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Music Festival 2026 | タイムテーブル</title>
     <link rel="stylesheet" href="css/timetable.css">
+    <link rel="stylesheet" href="css/all-style.css">
     <!-- Noto Sans JP -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +18,30 @@
 </head>
 <body>
     <!-- ヘッダー -->
+     <header class="site-header">
+        <a href="index.html" class="site-title">Spring Music Festival 2026</a>
+
+        <button class="menu-button" aria-label="メニュー">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+    </header>
+    <!-- ハンバーガーメニュー展開部分 -->
+    <nav class="hamburger-menu" id="hamburgerMenu">
+        <button class="close-button" aria-label="閉じる">✕</button>
+        <ul>
+            <li><a href="timetable.html">タイムテーブル</a></li>
+            <li><a href="artists/index.html">出演者一覧</a></li>
+            <li><a href="access.html">会場案内</a></li>
+            <li><a href="ticket.html">チケット情報</a></li>
+            <li><a href="goods.html">グッズ</a></li>
+            <li><a href="guide.html">来場者ガイド</a></li>
+            <li><a href="faq.html">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
+            <li><a href="privacy.html">プライバシーポリシー</a></li>
+        </ul>
+    </nav>
     <h1>タイムテーブル</h1>
     <div class="flex-col">
         <!-- 切り替えボタン -->
@@ -129,6 +154,37 @@
         </table>
     </div>
 
+    <!-- フッター -->
+     <footer class="site-footer">
+        <div class="footer-inner">
+
+            <div class="footer-col">
+                <a href="index.html">ホーム</a>
+                <a href="goods.html">グッズ</a>
+                <a href="timetable.html">タイムテーブル</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="guide.html">来場者ガイド</a>
+                <a href="artists.html">出演者一覧</a>
+                <a href="faq.html">よくある質問</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="access.html">会場案内</a>
+                <a href="contact.html">お問い合わせ</a>
+                <a href="ticket.html">チケット情報</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="privacy.html">プライバシーポリシー</a>
+            </div>
+
+        </div>
+
+        <p class="copyright text-center">Copyright©2026 Morijyobi</p>
+    </footer>
+    <script src="js/index.js"></script>
     <script src="js/timetable.js" defer></script>
 </body>
 </html>
