--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>よくある質問ページ</title>
     <link rel="stylesheet" href="css/faq.css">
+    <link rel="stylesheet" href="css/all-style.css">
     <!-- Noto Sans JP(日本語) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +14,9 @@
     <!-- Poppins(英語) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -43,85 +46,108 @@
         </ul>
     </nav>
 
+    <div class="fap">
+        <h1>チケットについて</h1>
 
-    <h1>チケットについて</h1>
+        <h2>Q1. チケットは当日券もありますか?</h2>
+        <p>A. はい、前売り券が完売していない場合のみ、当日券を販売いたします。ただし、
+            数に限りがありますので、事前に前売り券をご購入いただくことを強くおすすめします。
+            当日券の販売状況は、公式サイトおよびSNSで当日朝9時にお知らせします。
+        </p>
 
-    <h2>Q1. チケットは当日券もありますか?</h2>
-    <p>A. はい、前売り券が完売していない場合のみ、当日券を販売いたします。ただし、
-        数に限りがありますので、事前に前売り券をご購入いただくことを強くおすすめします。
-        当日券の販売状況は、公式サイトおよびSNSで当日朝9時にお知らせします。
-    </p>
+        <h2>Q2. チケットの転売は可能ですか?</h2>
+        <p>A. 公式チケット販売サイト以外での転売は固く禁じられています。
+            転売チケットでのご入場はお断りし、チケット代金の払い戻しもいたしかねます。
+            やむを得ず参加できなくなった場合は、公式リセールサービスをご利用ください。
+        </p>
 
-    <h2>Q2. チケットの転売は可能ですか?</h2>
-    <p>A. 公式チケット販売サイト以外での転売は固く禁じられています。
-        転売チケットでのご入場はお断りし、チケット代金の払い戻しもいたしかねます。
-        やむを得ず参加できなくなった場合は、公式リセールサービスをご利用ください。
-    </p>
+        <h2>Q3. 小学生以下は本当に無料ですか?</h2>
+        <p>A. はい、小学生以下のお子様は保護者同伴の場合に限り無料でご入場いただけます。
+            ただし、保護者の方は有料チケットが必要です。また、お子様だけでのご入場はできませんので、
+            必ず保護者の方とご一緒にお越しください。
+        </p>
 
-    <h2>Q3. 小学生以下は本当に無料ですか?</h2>
-    <p>A. はい、小学生以下のお子様は保護者同伴の場合に限り無料でご入場いただけます。
-        ただし、保護者の方は有料チケットが必要です。また、お子様だけでのご入場はできませんので、
-        必ず保護者の方とご一緒にお越しください。
-    </p>
+        <h1>入場・会場について</h1>
 
-    <h1>入場・会場について</h1>
+        <h2>Q4. 再入場は可能ですか?</h2>
+        <p>A. はい、再入場可能です。退場時に手の甲に再入場スタンプを押印いたします。
+            再入場の際は、スタンプとチケット(または購入確認メール)をスタッフにご提示ください。
+            スタンプが消えてしまった場合は再入場できませんのでご注意ください。
+        </p>
 
-    <h2>Q4. 再入場は可能ですか?</h2>
-    <p>A. はい、再入場可能です。退場時に手の甲に再入場スタンプを押印いたします。
-        再入場の際は、スタンプとチケット(または購入確認メール)をスタッフにご提示ください。
-        スタンプが消えてしまった場合は再入場できませんのでご注意ください。
-    </p>
+        <h2>Q5. 開場時間は何時ですか?</h2>
+        <p>A. 両日とも10:30開場予定です。開演(最初のアーティストのステージ開始)は11:00からとなります。
+            混雑が予想されますので、時間に余裕を持ってお越しください。
+        </p>
 
-    <h2>Q5. 開場時間は何時ですか?</h2>
-    <p>A. 両日とも10:30開場予定です。開演(最初のアーティストのステージ開始)は11:00からとなります。
-        混雑が予想されますので、時間に余裕を持ってお越しください。
-    </p>
+        <h2>Q6. 会場内に荷物を預ける場所はありますか?</h2>
+        <p>A. はい、有料のクロークサービスをご用意しております(1個500円)。
+            ただし、貴重品はお預かりできませんので、各自で管理をお願いいたします。
+            大きなお荷物はできるだけ持ち込まず、事前にコインロッカー等をご利用いただくことをおすすめします。
+        </p>
 
-    <h2>Q6. 会場内に荷物を預ける場所はありますか?</h2>
-    <p>A. はい、有料のクロークサービスをご用意しております(1個500円)。
-        ただし、貴重品はお預かりできませんので、各自で管理をお願いいたします。
-        大きなお荷物はできるだけ持ち込まず、事前にコインロッカー等をご利用いただくことをおすすめします。
-    </p>
+        <h1>飲食について</h1>
 
-    <h1>飲食について</h1>
+        <h2>Q7. 食べ物や飲み物の持ち込みはできますか?</h2>
+        <p>A. ペットボトルや水筒などの飲み物の持ち込みは可能です。
+            ただし、ビン・カン類の持ち込みは破損の危険があるため禁止です。
+            食べ物の持ち込みも可能ですが、会場内にはフードコート(10店舗)がございますので、ぜひご利用ください。
+        </p>
 
-    <h2>Q7. 食べ物や飲み物の持ち込みはできますか?</h2>
-    <p>A. ペットボトルや水筒などの飲み物の持ち込みは可能です。
-        ただし、ビン・カン類の持ち込みは破損の危険があるため禁止です。
-        食べ物の持ち込みも可能ですが、会場内にはフードコート(10店舗)がございますので、ぜひご利用ください。
-    </p>
+        <h2>Q8. 会場内で食事はできますか?</h2>
+        <p>A. はい、フードコートエリアに10店舗の飲食ブースを設置しております。
+            ハンバーガー、タコス、カレー、クレープなど多様なメニューをご用意しています。
+            価格帯は500円〜1,200円程度です。キャッシュレス決済も可能です。
+        </p>
 
-    <h2>Q8. 会場内で食事はできますか?</h2>
-    <p>A. はい、フードコートエリアに10店舗の飲食ブースを設置しております。
-        ハンバーガー、タコス、カレー、クレープなど多様なメニューをご用意しています。
-        価格帯は500円〜1,200円程度です。キャッシュレス決済も可能です。
-    </p>
+        <h1>その他</h1>
 
-    <h1>その他</h1>
+        <h2>Q9. 雨が降った場合はどうなりますか?</h2>
+        <p>A. 小雨の場合は決行いたします。ステージには屋根がございますが、観客エリアは屋外のため、
+            レインコートや雨具をご持参ください。荒天(台風、雷雨など)の場合は中止となる可能性があります。
+            開催可否は前日18時に公式サイトおよびSNSで発表いたします。
+        </p>
 
-    <h2>Q9. 雨が降った場合はどうなりますか?</h2>
-    <p>A. 小雨の場合は決行いたします。ステージには屋根がございますが、観客エリアは屋外のため、
-        レインコートや雨具をご持参ください。荒天(台風、雷雨など)の場合は中止となる可能性があります。
-        開催可否は前日18時に公式サイトおよびSNSで発表いたします。
-    </p>
+        <h2>Q10. 駐車場の予約方法は?</h2>
+        <p>A. 会場には100台分の無料駐車場がございますが、事前予約制となっております。
+            ご予約は公式サイトの専用フォームから、4月15日(水)10:00より先着順で受け付けます。
+            満車の場合は近隣のコインパーキングをご利用ください。なるべく公共交通機関でのご来場をお願いいたします。
+        </p>
+    </div>
 
-    <h2>Q10. 駐車場の予約方法は?</h2>
-    <p>A. 会場には100台分の無料駐車場がございますが、事前予約制となっております。
-        ご予約は公式サイトの専用フォームから、4月15日(水)10:00より先着順で受け付けます。
-        満車の場合は近隣のコインパーキングをご利用ください。なるべく公共交通機関でのご来場をお願いいたします。
-    </p>
+    <footer class="site-footer">
+        <div class="footer-inner">
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const menuButton = document.querySelector('.menu-button');
-            const menu = document.getElementById('hamburgerMenu');
+            <div class="footer-col">
+                <a href="index.html">ホーム</a>
+                <a href="goods.html">グッズ</a>
+                <a href="timetable.html">タイムテーブル</a>
+            </div>
 
-            menuButton.addEventListener('click', () => {
-                menu.classList.toggle('active');
-                menuButton.classList.toggle('active');
-            });
-        });
-    </script>
+            <div class="footer-col">
+                <a href="guide.html">来場者ガイド</a>
+                <a href="artists.html">出演者一覧</a>
+                <a href="faq.html">よくある質問</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="access.html">会場案内</a>
+                <a href="contact.html">お問い合わせ</a>
+                <a href="ticket.html">チケット情報</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="privacy.html">プライバシーポリシー</a>
+            </div>
+
+        </div>
+
+        <p class="copyright text-center">Copyright©2026 Morijyobi</p>
+    </footer>
+    <script src="js/index.js"></script>
+
+
+
 
 </body>
 
