--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>プライバシーポリシーページ</title>
     <link rel="stylesheet" href="css/privacy.css">
+    <link rel="stylesheet" href="css/all-style.css">
 </head>
+
+<header class="site-header">
+    <a href="index.html" class="site-title">Spring Music Festival 2026</a>
+
+    <button class="menu-button" aria-label="メニュー">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+</header>
+<!-- ハンバーガーメニュー展開部分 -->
+<nav class="hamburger-menu" id="hamburgerMenu">
+    <button class="close-button" aria-label="閉じる">✕</button>
+    <ul>
+        <li><a href="timetable.html">タイムテーブル</a></li>
+        <li><a href="artists/index.html">出演者一覧</a></li>
+        <li><a href="access.html">会場案内</a></li>
+        <li><a href="ticket.html">チケット情報</a></li>
+        <li><a href="goods.html">グッズ</a></li>
+        <li><a href="guide.html">来場者ガイド</a></li>
+        <li><a href="faq.html">よくある質問</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+        <li><a href="privacy.html">プライバシーポリシー</a></li>
+    </ul>
+</nav>
 
 <body>
     <section class="privacy-section">
@@ -104,7 +130,7 @@
 
             <div class="footer-col">
                 <a href="guide.html">来場者ガイド</a>
-                <a href="artists.html">出演者一覧</a>
+                <a href="artists/index.html">出演者一覧</a>
                 <a href="faq.html">よくある質問</a>
             </div>
 
@@ -122,6 +148,7 @@
 
         <p class="copyright text-center">Copyright©2026 Morijyobi</p>
     </footer>
+    <script src="js/index.js"></script>
 
 </body>
 
