--- a/contact-confirm.html
+++ b/contact-confirm.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Music Festival 2026 | 入力確認</title>
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/all-style.css">
     <!-- Noto Sans JP -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body><header class="site-header">
+        <a href="index.html" class="site-title">Spring Music Festival 2026</a>
+
+        <button class="menu-button" aria-label="メニュー">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+    </header>
+    <!-- ハンバーガーメニュー展開部分 -->
+    <nav class="hamburger-menu" id="hamburgerMenu">
+        <button class="close-button" aria-label="閉じる">✕</button>
+        <ul>
+            <li><a href="timetable.html">タイムテーブル</a></li>
+            <li><a href="artists/index.html">出演者一覧</a></li>
+            <li><a href="access.html">会場案内</a></li>
+            <li><a href="ticket.html">チケット情報</a></li>
+            <li><a href="goods.html">グッズ</a></li>
+            <li><a href="#">来場者ガイド</a></li>
+            <li><a href="faq.html">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
+            <li><a href="privacy.html">プライバシーポリシー</a></li>
+        </ul>
+    </nav>
     <h1>入力確認</h1>
     <div class="form-confirm">
         <div class="form-item">
@@ -42,7 +66,36 @@
             <button id="submit">送信</button>
         </div>
     </div>
+    <footer class="site-footer">
+        <div class="footer-inner">
 
+            <div class="footer-col">
+                <a href="index.html">ホーム</a>
+                <a href="goods.html">グッズ</a>
+                <a href="timetable.html">タイムテーブル</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="guide.html">来場者ガイド</a>
+                <a href="artists.html">出演者一覧</a>
+                <a href="faq.html">よくある質問</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="access.html">会場案内</a>
+                <a href="contact.html">お問い合わせ</a>
+                <a href="ticket.html">チケット情報</a>
+            </div>
+
+            <div class="footer-col">
+                <a href="privacy.html">プライバシーポリシー</a>
+            </div>
+
+        </div>
+
+        <p class="copyright text-center">Copyright©2026 Morijyobi</p>
+    </footer>
+    <script src="js/index.js"></script>
     <script src="/js/contact-confirm.js"></script>
 </body>
 </html>
