ヘッダーの修正

--- a/artists/DJ_Breeze.html
+++ b/artists/DJ_Breeze.html
@@ -39,41 +39,43 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/DJ_Breeze.webp" alt="DJ_Breeze">
-    </div>
-    <div>
-        <p>5月2日(土) 14:00-14:40 メインステージ</p>
-    </div>
-    <div>
-        <h1>DJ Breeze</h1>
-    </div>
-    <div>
-        <p>心地よい風のような爽やかなビートで、フロアを盛り上げる人気DJ。<br>
-            国内の大型フェスやクラブイベントに多数出演し、海外でも活躍中。<br>
-            オリジナルトラックはもちろん、即興でのリミックスも得意とし、<br>
-            その場の雰囲気に合わせた柔軟なDJプレイが高く評価されている。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>ハウス/テクノ</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. Spring Breeze</p>
-        <p>2. Sunrise Session</p>
-        <p>3. Feel the Wind</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@djbreeze_official</a></p>
-        <p>- Instagram:<a href="#">@dj_breeze</a></p>
-        <p>- SoundCloud:<a href="#">DJ Breeze</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/DJ_Breeze.webp" alt="DJ_Breeze">
+        </div>
+        <div>
+            <p>5月2日(土) 14:00-14:40 メインステージ</p>
+        </div>
+        <div>
+            <h1>DJ Breeze</h1>
+        </div>
+        <div>
+            <p>心地よい風のような爽やかなビートで、フロアを盛り上げる人気DJ。<br>
+                国内の大型フェスやクラブイベントに多数出演し、海外でも活躍中。<br>
+                オリジナルトラックはもちろん、即興でのリミックスも得意とし、<br>
+                その場の雰囲気に合わせた柔軟なDJプレイが高く評価されている。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>ハウス/テクノ</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. Spring Breeze</p>
+            <p>2. Sunrise Session</p>
+            <p>3. Feel the Wind</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@djbreeze_official</a></p>
+            <p>- Instagram:<a href="#">@dj_breeze</a></p>
+            <p>- SoundCloud:<a href="#">DJ Breeze</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
