--- a/artists/HorizonStrings.html
+++ b/artists/HorizonStrings.html
@@ -40,43 +40,45 @@
 </nav>
 
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/HorizonStrings.webp" alt="HorizonStrings">
-    </div>
-    <div>
-        <p>5月3日(日) 17:00-18:30 メインステージ</p>
-    </div>
-    <div>
-        <h1>Horizon Strings</h1>
-    </div>
-    <div>
-        <p>若手音楽家を中心に結成された室内オーケストラ。クラシックの名曲から、
-            映画音楽、アニメ音楽まで幅広いレパートリーで、クラシック音楽の魅力を伝える。<br>
-            「地平線(Horizon)まで響く弦楽の音色」をコンセプトに、
-            野外での演奏にも積極的に取り組んでいる。今回のフェスでは、<br>
-            春をテーマにしたクラシック曲とオリジナル曲を織り交ぜた特別プログラムを披露。<br>
-            夕暮れ時の壮大な演奏で、フェスのフィナーレを飾る。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>クラシック/オーケストラ</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. Spring Symphony</p>
-        <p>2. 四季より「春」(ヴィヴァルディ)</p>
-        <p>3. Horizon's Edge(オリジナル)</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@horizon_strings</a></p>
-        <p>- Instagram:<a href="#">@horizonstrings_orchestra</a></p>
-        <p>- YouTube:<a href="#">Horizon Strings Orchestra</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/HorizonStrings.webp" alt="HorizonStrings">
+        </div>
+        <div>
+            <p>5月3日(日) 17:00-18:30 メインステージ</p>
+        </div>
+        <div>
+            <h1>Horizon Strings</h1>
+        </div>
+        <div>
+            <p>若手音楽家を中心に結成された室内オーケストラ。クラシックの名曲から、
+                映画音楽、アニメ音楽まで幅広いレパートリーで、クラシック音楽の魅力を伝える。<br>
+                「地平線(Horizon)まで響く弦楽の音色」をコンセプトに、
+                野外での演奏にも積極的に取り組んでいる。今回のフェスでは、<br>
+                春をテーマにしたクラシック曲とオリジナル曲を織り交ぜた特別プログラムを披露。<br>
+                夕暮れ時の壮大な演奏で、フェスのフィナーレを飾る。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>クラシック/オーケストラ</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. Spring Symphony</p>
+            <p>2. 四季より「春」(ヴィヴァルディ)</p>
+            <p>3. Horizon's Edge(オリジナル)</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@horizon_strings</a></p>
+            <p>- Instagram:<a href="#">@horizonstrings_orchestra</a></p>
+            <p>- YouTube:<a href="#">Horizon Strings Orchestra</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
