--- a/artists/VelvetGroove.html
+++ b/artists/VelvetGroove.html
@@ -39,43 +39,45 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/VelvetGroove.webp" alt="VelvetGroove">
-    </div>
-    <div>
-        <p>5月2日(土) 13:00-13:40 / 16:00-16:40 サブステージ</p>
-    </div>
-    <div>
-        <h1>Velvet Groove</h1>
-    </div>
-    <div>
-        <p>サックス、ピアノ、ベース、ドラムの4人編成によるジャズバンド。<br>
-            クラシカルなジャズをベースに、現代的なグルーヴ感を取り入れたサウンドが魅力。<br>
-            ジャズクラブでの演奏を中心に活動し、即興演奏の高い技術力で知られる。<br>
-            「ベルベットのように滑らかなグルーヴ」という名前の通り、
-            心地よいリズムとメロディで聴く人を魅了する。<br>
-            フェスでは昼下がりにぴったりの演奏を。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>ジャズ/フュージョン</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. Smooth Breeze</p>
-        <p>2. Velvet Sky</p>
-        <p>3. Spring Serenade</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@velvet_groove</a></p>
-        <p>- Instagram:<a href="#">@velvetgroove_jazz</a></p>
-        <p>- YouTube:<a href="#">Velvet Groove Official</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/VelvetGroove.webp" alt="VelvetGroove">
+        </div>
+        <div>
+            <p>5月2日(土) 13:00-13:40 / 16:00-16:40 サブステージ</p>
+        </div>
+        <div>
+            <h1>Velvet Groove</h1>
+        </div>
+        <div>
+            <p>サックス、ピアノ、ベース、ドラムの4人編成によるジャズバンド。<br>
+                クラシカルなジャズをベースに、現代的なグルーヴ感を取り入れたサウンドが魅力。<br>
+                ジャズクラブでの演奏を中心に活動し、即興演奏の高い技術力で知られる。<br>
+                「ベルベットのように滑らかなグルーヴ」という名前の通り、
+                心地よいリズムとメロディで聴く人を魅了する。<br>
+                フェスでは昼下がりにぴったりの演奏を。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>ジャズ/フュージョン</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. Smooth Breeze</p>
+            <p>2. Velvet Sky</p>
+            <p>3. Spring Serenade</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@velvet_groove</a></p>
+            <p>- Instagram:<a href="#">@velvetgroove_jazz</a></p>
+            <p>- YouTube:<a href="#">Velvet Groove Official</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
 
