--- a/artists/中村蓮.html
+++ b/artists/中村蓮.html
@@ -39,41 +39,43 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/中村蓮.webp" alt="中村蓮">
-    </div>
-    <div>
-        <p>5月2日(土) 15:00-15:40 メインステージ</p>
-    </div>
-    <div>
-        <h1>中村蓮</h1>
-    </div>
-    <div>
-        <p>リリカルなラップスタイルと、自身で制作するトラックが特徴の若手ラッパー。<br>
-            日常の葛藤や希望をテーマにした等身大の歌詞が、同世代から強く共感される。<br>
-            2023年にリリースしたミックステープ「蓮華」がストリーミングで100万再生を突破。<br>
-            ライブではトラックメイキングの実演も行い、音楽制作の面白さを伝えている。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>ヒップホップ/ラップ</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. 蓮の花</p>
-        <p>2. 東京ストーリー</p>
-        <p>3. 新しい朝</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@nakamura_ren</a></p>
-        <p>- Instagram:<a href="#">@ren_nakamura_official</a></p>
-        <p>- YouTube:<a href="#">中村蓮 Official</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/中村蓮.webp" alt="中村蓮">
+        </div>
+        <div>
+            <p>5月2日(土) 15:00-15:40 メインステージ</p>
+        </div>
+        <div>
+            <h1>中村蓮</h1>
+        </div>
+        <div>
+            <p>リリカルなラップスタイルと、自身で制作するトラックが特徴の若手ラッパー。<br>
+                日常の葛藤や希望をテーマにした等身大の歌詞が、同世代から強く共感される。<br>
+                2023年にリリースしたミックステープ「蓮華」がストリーミングで100万再生を突破。<br>
+                ライブではトラックメイキングの実演も行い、音楽制作の面白さを伝えている。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>ヒップホップ/ラップ</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. 蓮の花</p>
+            <p>2. 東京ストーリー</p>
+            <p>3. 新しい朝</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@nakamura_ren</a></p>
+            <p>- Instagram:<a href="#">@ren_nakamura_official</a></p>
+            <p>- YouTube:<a href="#">中村蓮 Official</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
