--- a/artists/宮本サクラ.html
+++ b/artists/宮本サクラ.html
@@ -39,41 +39,43 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/宮本サクラ.webp" alt="宮本サクラ">
-    </div>
-    <div>
-        <p>5月3日(日) 12:00-12:40 / 15:00-15:40 メインステージ</p>
-    </div>
-    <div>
-        <h1>宮本サクラ</h1>
-    </div>
-    <div>
-        <p>華やかなステージパフォーマンスと、明るく元気な歌声で人気のシンガー。<br>
-            ダンスと歌を高いレベルで両立し、エネルギッシュなライブで観客を魅了する。<br>
-            2021年デビュー曲「咲き誇れ」が若者を中心に大ヒット。<br>
-            TikTokでのダンスチャレンジも話題となり、SNS総フォロワー数50万人を超える。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>J-POP/ダンスポップ</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. 咲き誇れ</p>
-        <p>2. 虹色の未来</p>
-        <p>3. 春風ダンス</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@miyamoto_sakura</a></p>
-        <p>- Instagram:<a href="#">@sakura_miyamoto_official</a></p>
-        <p>- TikTok:<a href="#"> @sakura_miyamoto</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/宮本サクラ.webp" alt="宮本サクラ">
+        </div>
+        <div>
+            <p>5月3日(日) 12:00-12:40 / 15:00-15:40 メインステージ</p>
+        </div>
+        <div>
+            <h1>宮本サクラ</h1>
+        </div>
+        <div>
+            <p>華やかなステージパフォーマンスと、明るく元気な歌声で人気のシンガー。<br>
+                ダンスと歌を高いレベルで両立し、エネルギッシュなライブで観客を魅了する。<br>
+                2021年デビュー曲「咲き誇れ」が若者を中心に大ヒット。<br>
+                TikTokでのダンスチャレンジも話題となり、SNS総フォロワー数50万人を超える。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>J-POP/ダンスポップ</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. 咲き誇れ</p>
+            <p>2. 虹色の未来</p>
+            <p>3. 春風ダンス</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@miyamoto_sakura</a></p>
+            <p>- Instagram:<a href="#">@sakura_miyamoto_official</a></p>
+            <p>- TikTok:<a href="#"> @sakura_miyamoto</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
