--- a/artists/NeonLights.html
+++ b/artists/NeonLights.html
@@ -39,42 +39,44 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/NeonLights.webp" alt="NeonLights">
-    </div>
-    <div>
-        <p>5月3日(日) 13:00-13:40 / 16:00-16:40 サブステージ</p>
-    </div>
-    <div>
-        <h1>Neon Lights</h1>
-    </div>
-    <div>
-        <p>ブラスセクションを含む6人編成のソウル/ファンクバンド。<br>
-            70年代のソウルミュージックに影響を受けた、グルーヴィーでダンサブルなサウンドが特徴。<br>
-            パワフルなボーカルと、息の合ったホーンセクションが織りなすサウンドは、
-            聴く人を自然と踊らせる。<br>ライブでは観客参加型の盛り上がりを大切にしている。
-            ネオンサインのように煌びやかで、心躍る音楽を届ける。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>ソウル/ファンク/R&B</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. Neon Nights</p>
-        <p>2. Funky Boulevard</p>
-        <p>3. Soul Paradise</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@neon_lights_band</a></p>
-        <p>- Instagram:<a href="#">@neonlights_official</a></p>
-        <p>- YouTube:<a href="#">Neon Lights Official</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/NeonLights.webp" alt="NeonLights">
+        </div>
+        <div>
+            <p>5月3日(日) 13:00-13:40 / 16:00-16:40 サブステージ</p>
+        </div>
+        <div>
+            <h1>Neon Lights</h1>
+        </div>
+        <div>
+            <p>ブラスセクションを含む6人編成のソウル/ファンクバンド。<br>
+                70年代のソウルミュージックに影響を受けた、グルーヴィーでダンサブルなサウンドが特徴。<br>
+                パワフルなボーカルと、息の合ったホーンセクションが織りなすサウンドは、
+                聴く人を自然と踊らせる。<br>ライブでは観客参加型の盛り上がりを大切にしている。
+                ネオンサインのように煌びやかで、心躍る音楽を届ける。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>ソウル/ファンク/R&B</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. Neon Nights</p>
+            <p>2. Funky Boulevard</p>
+            <p>3. Soul Paradise</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@neon_lights_band</a></p>
+            <p>- Instagram:<a href="#">@neonlights_official</a></p>
+            <p>- YouTube:<a href="#">Neon Lights Official</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
