--- a/artists/TheBlossomDrive.html
+++ b/artists/TheBlossomDrive.html
@@ -39,43 +39,45 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/TheBlossomDrive.webp" alt="TheBlossomDrive">
-    </div>
-    <div>
-        <p>5月2日(土) 11:00-11:40 / 17:00-18:00(スペシャルライブ) メインステージ</p>
-    </div>
-    <div>
-        <h1>The Blossom Drive</h1>
-    </div>
-    <div>
-        <p>2020年結成の4人組ロックバンド。疾走感あるギターサウンドと、
-            エモーショナルなボーカルが特徴。<br>
-            バンド名は「花開く道」を意味し、
-            聴く人に新しい道を示すような音楽を目指している。<br>
-            デビューEP「Spring Forward」がインディーズチャート1位を獲得。<br>
-            今回のフェスでは最新曲を含む、エネルギッシュなセットを披露予定。<br>
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>オルタナティブロック</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. Bloom Again</p>
-        <p>2. Road to Tomorrow</p>
-        <p>3. Electric Petals</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@blossomdrive</a></p>
-        <p>- Instagram:<a href="#">@the_blossom_drive</a></p>
-        <p>- YouTube:<a href="#">The Blossom Drive Official</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/TheBlossomDrive.webp" alt="TheBlossomDrive">
+        </div>
+        <div>
+            <p>5月2日(土) 11:00-11:40 / 17:00-18:00(スペシャルライブ) メインステージ</p>
+        </div>
+        <div>
+            <h1>The Blossom Drive</h1>
+        </div>
+        <div>
+            <p>2020年結成の4人組ロックバンド。疾走感あるギターサウンドと、
+                エモーショナルなボーカルが特徴。<br>
+                バンド名は「花開く道」を意味し、
+                聴く人に新しい道を示すような音楽を目指している。<br>
+                デビューEP「Spring Forward」がインディーズチャート1位を獲得。<br>
+                今回のフェスでは最新曲を含む、エネルギッシュなセットを披露予定。<br>
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>オルタナティブロック</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. Bloom Again</p>
+            <p>2. Road to Tomorrow</p>
+            <p>3. Electric Petals</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@blossomdrive</a></p>
+            <p>- Instagram:<a href="#">@the_blossom_drive</a></p>
+            <p>- YouTube:<a href="#">The Blossom Drive Official</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
