--- a/artists/森下晴人.html
+++ b/artists/森下晴人.html
@@ -39,41 +39,43 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/森下晴人.webp" alt="森下晴人">
-    </div>
-    <div>
-        <p>5月3日(日) 14:00-14:40 メインステージ</p>
-    </div>
-    <div>
-        <h1>森下晴人</h1>
-    </div>
-    <div>
-        <p>シンセサイザーとフィールドレコーディングを組み合わせた独自のサウンドで、<br>
-            幻想的な音世界を作り出すエレクトロニカアーティスト。<br>
-            自然音と電子音を融合させた作品は、国内外の音楽メディアから高い評価を受ける。<br>
-            ライブでは映像と音楽をシンクロさせた没入感のあるパフォーマンスを展開。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>エレクトロニカ/実験音楽</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. 森の記憶</p>
-        <p>2. 光の粒子</p>
-        <p>3. Spring Ambient</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@morishita_haruto</a></p>
-        <p>- Instagram:<a href="#">@haruto_morishita</a></p>
-        <p>- Bandcamp:<a href="#">Morishita Haruto</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/森下晴人.webp" alt="森下晴人">
+        </div>
+        <div>
+            <p>5月3日(日) 14:00-14:40 メインステージ</p>
+        </div>
+        <div>
+            <h1>森下晴人</h1>
+        </div>
+        <div>
+            <p>シンセサイザーとフィールドレコーディングを組み合わせた独自のサウンドで、<br>
+                幻想的な音世界を作り出すエレクトロニカアーティスト。<br>
+                自然音と電子音を融合させた作品は、国内外の音楽メディアから高い評価を受ける。<br>
+                ライブでは映像と音楽をシンクロさせた没入感のあるパフォーマンスを展開。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>エレクトロニカ/実験音楽</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. 森の記憶</p>
+            <p>2. 光の粒子</p>
+            <p>3. Spring Ambient</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@morishita_haruto</a></p>
+            <p>- Instagram:<a href="#">@haruto_morishita</a></p>
+            <p>- Bandcamp:<a href="#">Morishita Haruto</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
