--- a/artists/高橋リオ.html
+++ b/artists/高橋リオ.html
@@ -39,41 +39,43 @@
     </ul>
 </nav>
 
-<body class="artist">
-    <div class="artist-img">
-        <img src="img/高橋リオ.webp" alt="高橋リオ">
-    </div>
-    <div>
-        <p>5月2日(土) 12:00-12:40 メインステージ</p>
-    </div>
-    <div>
-        <h1>高橋リオ</h1>
-    </div>
-    <div>
-        <p>心に染み入る歌声と、日常の風景を切り取った歌詞が魅力のシンガーソングライター。<br>
-            ギターとピアノを弾きながら歌うスタイルで、20代を中心に幅広い世代から支持を集める。<br>
-            2022年リリースの「春の街角」がSNSで話題となり、メジャーデビュー。<br>
-            ライブでは弾き語りを中心に、温かい空間を作り出すことで定評がある。
-        </p>
-    </div>
-    <div>
-        <h4>ジャンル</h4>
-        <p>フォーク/アコースティックポップ</p>
-    </div>
-    <div>
-        <h4>代表曲</h4>
-        <p>1. 春の街角</p>
-        <p>2. 君との時間</p>
-        <p>3. 優しい嘘</p>
-    </div>
-    <div>
-        <h4>SNS</h4>
-        <p>- X:<a href="#">@takahashi_rio</a></p>
-        <p>- Instagram:<a href="#">@rio_takahashi_official</a></p>
-        <p>- YouTube:<a href="#">高橋リオ Official</a></p>
-    </div>
-    <div class="button-container">
-        <a href="index.html" class="btn-back">一覧に戻る</a>
+<body>
+    <div class="artist">
+        <div class="artist-img">
+            <img src="img/高橋リオ.webp" alt="高橋リオ">
+        </div>
+        <div>
+            <p>5月2日(土) 12:00-12:40 メインステージ</p>
+        </div>
+        <div>
+            <h1>高橋リオ</h1>
+        </div>
+        <div>
+            <p>心に染み入る歌声と、日常の風景を切り取った歌詞が魅力のシンガーソングライター。<br>
+                ギターとピアノを弾きながら歌うスタイルで、20代を中心に幅広い世代から支持を集める。<br>
+                2022年リリースの「春の街角」がSNSで話題となり、メジャーデビュー。<br>
+                ライブでは弾き語りを中心に、温かい空間を作り出すことで定評がある。
+            </p>
+        </div>
+        <div>
+            <h4>ジャンル</h4>
+            <p>フォーク/アコースティックポップ</p>
+        </div>
+        <div>
+            <h4>代表曲</h4>
+            <p>1. 春の街角</p>
+            <p>2. 君との時間</p>
+            <p>3. 優しい嘘</p>
+        </div>
+        <div>
+            <h4>SNS</h4>
+            <p>- X:<a href="#">@takahashi_rio</a></p>
+            <p>- Instagram:<a href="#">@rio_takahashi_official</a></p>
+            <p>- YouTube:<a href="#">高橋リオ Official</a></p>
+        </div>
+        <div class="button-container">
+            <a href="index.html" class="btn-back">一覧に戻る</a>
+        </div>
     </div>
     <footer class="site-footer">
         <div class="footer-inner">
