access.htmlとticket.htmlの修正

--- a/access.html
+++ b/access.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>会場案内</title>
-    <link rel="stylesheet" href="css/access.css">
+    <link rel="stylesheet" href="CSS/access.css">
     <!-- Noto Sans JP(日本語) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,6 +49,8 @@
         <h1 class="midasi">住所</h1>
         <p>東京都〇〇区△△1-2-3</p>
         <h1 class="midasi">アクセス方法</h1>
+        <p>電車：JR〇〇駅から徒歩15分</p>
+        <p>車：駐車場100台(事前予約制)</p>
         <div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3069.551781155557!2d141.14021717597595!3d39.70478067156294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f857630971ceb65%3A0xa71278d9c8f84080!2zTUNM55ub5bKh5oOF5aCx44OT44K444ON44K577yG44OH44K244Kk44Oz5bCC6ZaA5a2m5qChIOODh-OCtuOCpOODs-aDheWgsemkqA!5e0!3m2!1sja!2sjp!4v1768960831510!5m2!1sja!2sjp"
