--- a/ticket.html
+++ b/ticket.html
@@ -93,7 +93,7 @@
             <p>（チケットはチケット販売サイトで購入してください）</p>
 
             <h2>チケット販売サイト</h2>
-            <p>チケットapi　<a href="index.html">チケット購入サイトへ</a></p>
+            <p>チケットapi　<a href="#">チケット購入サイトへ</a></p>
 
             <h2>注意事項</h2>
             <p>小学生以下は保護者同伴で無料</p>
